sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: ';' expected but 'while' found.
			} while (end!=0)
                          ^AlgBubbleSort1:16: error: 'while' expected but '}' found.
}
^